--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -31,5 +31,6 @@ logo.png: logo-897244d08cea522f718ea833dcfbca7d.png
 slide1.png: slide1-45aa1db5563da278977d6afadc297adc.png
 slide2.png: slide2-e56ac3f9754aba6d95e21d999b5cfbd3.png
 application.js: application-2400e848db7583d941f7f5ef2497d9a2.js
+nivo-slider.css: nivo-slider-531779b5ac8885d435f4ee069ae1541d.css
 application.css: application-953aa5aeab6971808b4114a4bb681113.css
 default.css: default-7ee829e4fb56384c1ec8451e06ed285a.css
