--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -31,6 +31,9 @@ logo.png: logo-897244d08cea522f718ea833dcfbca7d.png
 slide1.png: slide1-45aa1db5563da278977d6afadc297adc.png
 slide2.png: slide2-e56ac3f9754aba6d95e21d999b5cfbd3.png
 application.js: application-2400e848db7583d941f7f5ef2497d9a2.js
+jquery-1.4.3.min.js: jquery-1.4.3.min-475c118981bccd9f835c2175fb9ffa2a.js
+jquery.nivo.slider.pack.js: jquery.nivo.slider.pack-8f21fd8d93f34210f59c96bcdad9c146.js
+pages.js: pages-858094f437690f433871c26b46760bad.js
 application.css: application-953aa5aeab6971808b4114a4bb681113.css
 nivo-slider.css: nivo-slider-531779b5ac8885d435f4ee069ae1541d.css
 default.css: default-7ee829e4fb56384c1ec8451e06ed285a.css
